<resources>
    <string name="app_name">My Finance Manager</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_screen">Statistics screen</string>
    <string name="filter">Filter</string>
    <string name="filter_widget">Filter widget</string>
    <string name="limit">Limit</string>
    <string name="limits_screen">Limits screen</string>
    <string name="add_new_account">Add new account</string>
    <string name="color">Color</string>
    <string name="pick_your_color">Pick your color</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="value" translatable="false">Value</string>
    <string name="saturation" translatable="false">Saturation</string>
    <string name="hue" translatable="false">Hue</string>
    <string name="hex_color">Hex color</string>
    <string name="add_new_balance">Add new balance</string>
    <string name="initial_balance">Initial balance</string>
    <string name="icon">Icon</string>
    <string name="name_of_balance">Name of balance</string>
    <string name="enter_balance_error">Enter balance</string>
    <string name="enter_limit_error">Enter limit</string>
    <string name="enter_name_error">Enter name of balance</string>
    <string name="enter_icon_error">Enter icon value</string>
    <string name="error">An undefined error occurred</string>
    <string name="balance_already_exists">Balance with this name already exists</string>
    <string name="left_text">Left: </string>
    <string name="more_options">More options</string>
    <string name="more">More</string>
    <string name="add">Add</string>
    <string name="add_money">Add money</string>
    <string name="remove">Remove</string>
    <string name="remove_money">Remove money</string>
    <string name="transfer">Transfer</string>
    <string name="transfer_money_between_accounts">Transfer money between accounts</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="all">All</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>

    <string name="analyticalPieChartAmount">Amount</string>

    <string-array name="analyticalPieChartColorArray">
        <item>#E480F4</item>
        <item>#6CC3F3</item>
        <item>#7167ED</item>
        <item>#D9455F</item>
        <item>#6054EA</item>
    </string-array>
</resources>