<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/statistics"
        android:title="@string/statistics"
        android:icon="@drawable/statictics"
        android:contentDescription="@string/statistics_screen"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/filter_icon"
        android:contentDescription="@string/filter_widget"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/limit"
        android:title="@string/limit"
        android:icon="@drawable/limit_icon"
        android:contentDescription="@string/limits_screen"
        app:showAsAction="ifRoom" />

</menu>