<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.view.bottom_sheets.AddNewBalanceBottomSheetDialogFragment">

    <!-- Здесь вы можете добавить любые элементы интерфейса, которые вы хотите отобразить в вашем Bottom Sheet -->

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottomSheetDragHandle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/balanceNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name_of_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetDragHandle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/balanceNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/colorCircle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/colorCircle" />

    <View
        android:id="@+id/colorCircle"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balanceNameInputLayout" />

    <!-- MaterialTextView "Icon" between colorCircle and initialBalanceInputLayout -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/iconTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/icon"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iconImageView"
        app:layout_constraintBottom_toBottomOf="@id/iconImageView"/>


    <!-- TextInput for icon -->

    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:id="@+id/iconImageView"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorCircle"
        app:srcCompat="@drawable/icon_1" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/initialBalanceInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/initial_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/limitInputLayout"
        app:layout_constraintTop_toBottomOf="@id/iconImageView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/initialBalanceEditText"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/limitInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/initialBalanceInputLayout"
        app:layout_constraintTop_toTopOf="@id/initialBalanceInputLayout"
        app:layout_constraintBottom_toBottomOf="@id/initialBalanceInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/limitEditText"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addNewBalanceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_new_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/limitInputLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>